# painting-environment-first-contact

./: LICENSE  README.md  pyproject.toml
docs/: greedy-agent.md
examples/: run_greedy.py  run_random.py
painting_env/: __init__.py  agents.py  env.py  targets.py
tests/: test_env.py
